[package]
name = "ambition_dialog"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Reusable dialogue runtime: the poll-based DialogState view model (typewriter reveal + option selection), the typewriter-SFX selection rules, the input/reveal Bevy systems, and the bevy_yarnspinner↔DialogState bridge plus the generic Yarn binding-installer seam. Content-free — a host's game-specific Yarn commands/functions register through the installer seam; the host maps DialogState.active onto its own session mode. Extracted from ambition_gameplay_core (E1c)."

[lib]
crate-type = ["rlib"]

[features]
default = []
# Enables the bevy_yarnspinner bridge + binding-installer machinery. Without
# it the crate is just the view model + reveal/SFX logic (headless-safe).
ui = ["dep:bevy_yarnspinner"]
# Forwarded from the host: real keyboard/gamepad + pointer input translators.
# Without it the input systems compile as no-op stubs.
input = ["ambition_input/input", "ambition_ui_nav/input"]

[dependencies]
# Vec2 for pointer/reveal geometry.
ambition_engine_core = { path = "../ambition_engine_core" }
# MenuFocusState + windowed-list / pointer-row helpers + MenuInputFrame scroll.
ambition_ui_nav = { path = "../ambition_ui_nav" }
# MenuControlFrame (input feature) + MenuInputFrame.
ambition_input = { path = "../ambition_input" }
# SfxMessage / SfxId / cue ids for the typewriter blips + markup accents.
ambition_sfx = { path = "../ambition_sfx" }
# SandboxSave for the bridge's per-node visit-count bookkeeping + MenuTapMode.
ambition_persistence = { path = "../ambition_persistence" }
# `ui_api` carries the windowing + time + ecs + observer surface the systems
# and bridge use, transitively (ui_api -> default_app -> bevy_window). Matches
# ambition_gameplay_core's base bevy dep so feature unification stays headless.
# `x11` only affects isolated test/check builds of this crate: `ui_api` pulls
# winit, which needs a display backend to compile at all (mirrors ambition_audio).
bevy = { version = "0.18.1", default-features = false, features = ["ui_api", "x11"] }
bevy_yarnspinner = { version = "0.8", optional = true }
