[package]
name = "ambition_engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core assetless movement/collision/sandbox logic for Ambition Engine."

[dependencies]
bevy_math = { version = "0.18.1", features = ["serialize"] }
parry2d = "0.26"
serde = { version = "1", features = ["derive"] }
