[package]
name = "ambition_engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core assetless movement/collision/sandbox logic for Ambition Engine."

[dependencies]
bevy = { version = "0.18.1", default-features = false }
bevy_math = { version = "0.18.1", features = ["serialize"] }
parry2d = "0.26"
seldom_state = { version = "0.16", default-features = false }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
insta = { version = "1", features = ["ron"] }
proptest = "1"
