[package]
name = "ambition_game_shell"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Renderer-independent routing and scoped lifecycle for top-level game experiences, plus neutral sequences and a minimal launcher."
publish = false

[lib]
crate-type = ["rlib"]

[features]
default = []
basic_presentation = [
    "dep:ambition_menu",
    "ambition_menu/bevy_ui_menu",
    "bevy/ui_api",
    "bevy/bevy_asset",
    "bevy/bevy_image",
    # `ui_api` -> `default_app` -> `bevy_winit`, and winit does not compile at
    # all without a display backend. This only matters for an ISOLATED build of
    # this crate (a real app selects its own platform feature) — but "isolated
    # build" is exactly what `cargo test -p ambition_game_shell` is. Same
    # declaration `ambition_dialog` and `ambition_audio` already carry.
    #
    # This used to compile by accident: `ambition_menu` requested bevy's full
    # default features, so feature unification handed x11 to the whole
    # workspace. Trimming that (2026-07-19) removed the accident and exposed
    # the missing declaration here.
    "bevy/x11",
]

[dependencies]
ambition_menu = { path = "../ambition_menu", default-features = false, optional = true }
ambition_audio = { path = "../ambition_audio", default-features = false }
# `MenuControlFrame` only — the device-agnostic menu-intent seam every other
# menu in the game already consumes. The shell reads it so touch / on-screen
# buttons can drive the launcher and pause menu without the shell growing a
# second device reader per input source. `ambition_input` is a leaf (bevy only,
# no ambition_* deps), so this stays a clean downward edge.
ambition_input = { path = "../ambition_input", default-features = false }
ambition_load = { path = "../ambition_load" }
ambition_platformer_primitives = { path = "../ambition_platformer_primitives" }
ambition_sfx = { path = "../ambition_sfx" }
# `input.rs` (shell_action_edges) is always compiled and reads KeyCode +
# Gamepad, so the base dependency needs the input surface: `bevy_input_focus`
# is the smallest feature that puts KeyCode in the prelude, and `gamepad`
# un-configures `bevy::input::gamepad` (same pairing as ambition_input).
# Without these, the crate only compiled when a co-built sibling happened to
# unify them in — `cargo test -p ambition_game_shell` alone did not build.
bevy = { version = "0.18.1", default-features = false, features = [
    "bevy_input_focus",
    "gamepad",
] }
