[package]
name = "ambition_host"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "The windowed-HOST face (decomposition E5 step 5): a `PlatformerHostPlugins` plugin group that assembles the wiring only a VISIBLE platformer host needs on top of `PlatformerEnginePlugins` — the leafwing input bindings/bridge and the camera follow/shake cluster. MAY dep render/input/leafwing/gameplay_core; must NOT dep ambition_content (boundary-tested). The shared per-frame SIM wiring lives in `ambition_runtime` (headless/RL runs it too)."

[dependencies]
ambition_gameplay_core = { path = "../ambition_gameplay_core", default-features = false, features = [
    "headless",
] }
ambition_input = { path = "../ambition_input" }
ambition_render = { path = "../ambition_render" }
ambition_sim_view = { path = "../ambition_sim_view" }
bevy = { version = "0.18.1", default-features = false, features = ["bevy_state"] }
leafwing-input-manager = { version = "0.20", optional = true }

[features]
default = []
# The leafwing input bindings + the device→ControlFrame bridge
# (HostInputBindingsPlugin). Mirrors the app's `input` persona feature.
input = [
    "ambition_gameplay_core/input",
    "ambition_input/input",
    "ambition_render/input",
    "ambition_sim_view/input",
    "dep:leafwing-input-manager",
]
# Portal camera-continuity wiring inside HostCameraPlugin.
portal = ["ambition_gameplay_core/portal"]
portal_render = [
    "portal",
    "ambition_gameplay_core/portal_render",
    "ambition_render/portal_render",
]

[dev-dependencies]
# The demo-shell smoke test (E5 step 6) assembles foundation + engine group +
# this host group + a fixture content plugin (which builds a one-room world).
ambition_runtime = { path = "../ambition_runtime" }
ambition_engine_core = { path = "../ambition_engine_core" }
