[package]
name = "ambition_host"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "The windowed-HOST face (decomposition E5 step 5): a `PlatformerHostPlugins` plugin group that assembles the wiring only a VISIBLE platformer host needs on top of `PlatformerEnginePlugins` — the leafwing input bindings/bridge and the camera follow/shake cluster. MAY dep render/input/runtime/sim_view/leafwing; must NOT dep ambition_actors or ambition_content (boundary-tested). The shared per-frame SIM wiring lives in `ambition_runtime` (headless/RL runs it too)."

[dependencies]
ambition_engine_core = { path = "../ambition_engine_core" }
ambition_input = { path = "../ambition_input" }
ambition_platformer_primitives = { path = "../ambition_platformer_primitives" }
ambition_portal = { path = "../ambition_portal", optional = true }
ambition_portal_presentation = { path = "../ambition_portal_presentation", optional = true }
ambition_render = { path = "../ambition_render" }
ambition_runtime = { path = "../ambition_runtime" }
ambition_sim_view = { path = "../ambition_sim_view" }
bevy = { version = "0.18.1", default-features = false, features = [
    "bevy_asset",
    "bevy_image",
    "bevy_input_focus",
    "bevy_state",
] }
leafwing-input-manager = { version = "0.20", optional = true }

[features]
default = []
# The leafwing input bindings + the device→ControlFrame bridge
# (HostInputBindingsPlugin). Mirrors the app's `input` persona feature.
input = [
    "ambition_input/input",
    "ambition_render/input",
    "ambition_sim_view/input",
    "dep:leafwing-input-manager",
]
# Portal camera-continuity wiring inside HostCameraPlugin.
portal = ["dep:ambition_portal"]
portal_render = [
    "portal",
    "dep:ambition_portal_presentation",
    "ambition_render/portal_render",
]

[dev-dependencies]
# The demo-shell smoke test (E5 step 6) assembles foundation + engine group +
# this host group + a fixture content plugin (which builds a one-room world).
ambition_characters = { path = "../ambition_characters" }
ambition_platformer_provider = { path = "../ambition_platformer_provider" }
