[package]
name = "ambition_input"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Device -> engine-owned ControlFrame input adapter for ambition: SandboxAction (leafwing), MenuControlFrame, keyboard/gamepad presets, active-input-kind tracking, and input-domain settings (deadzones / trigger hysteresis / dash mode). The upper-sibling input abstraction (ADR 0019); decoupled from sandbox content and reusable character brains so the input-ordering bug class cannot silently recur. See docs/current/state.md and docs/systems/architecture.md."

[lib]
# rlib only: a library consumed by ambition_actors. Packaging is the
# consuming binary's responsibility.
crate-type = ["rlib"]

[features]
# Mirrors the sandbox `input` feature: gates the leafwing `Actionlike`
# surface (SandboxAction + the device->ControlFrame builders). Sim-only
# builds use `ControlFrame` (always-available) on the seam instead.
default = []
input = ["dep:leafwing-input-manager"]

[dependencies]
# Input needs the windowing/input surface (KeyCode / GamepadButton) plus
# Reflect + the ECS Resource/Component derives. `bevy_state` pulls the
# input + reflect + ecs surface leafwing's derive macros expect, while
# default-features=false keeps render/audio/asset out of this layer.
# `bevy_input_focus` is the smallest feature that brings the `bevy_input`
# surface (KeyCode / GamepadButton, used by the always-compiled keyboard
# presets) into the bevy prelude. Render / audio / asset features are left
# off so this input layer stays a thin sibling. (leafwing pulls a wider
# surface transitively when the `input` feature is on, but this crate must
# also compile WITHOUT leafwing for sim-only builds.)
bevy = { version = "0.18.1", default-features = false, features = [
    "bevy_input_focus",
    # `gamepad` (light: just turns on `bevy_input/gamepad`) lets the
    # active-input detector read connected pads to flip `ActiveInputKind`
    # to Gamepad. Without it the `Gamepad` component is configured out.
    "gamepad",
] }
# `bevy_window` is ALREADY a transitive dep (via `bevy_input_focus`), but the
# `bevy` facade only re-exports `bevy::window` when the `bevy_window` feature is
# on — which would also drag in `bevy_image`/`bevy_a11y`. Depending on the
# already-built `bevy_window` crate directly keeps this layer thin while giving
# the active-input detector the `CursorMoved` message it needs.
bevy_window = { version = "0.18.1", default-features = false }
leafwing-input-manager = { version = "0.20", optional = true }

# The content-free pure-logic foundation. Input maps the device-side
# device input into the engine-owned `ControlFrame`, so it depends DOWN on the
# foundation — never on ambition_actors or ambition_characters.
ambition_engine_core = { path = "../ambition_engine_core" }

serde = { version = "1", features = ["derive"] }
