[package]
name = "ambition_interaction"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Reusable, content-free interactive-world-object MODEL: the Interactable / InteractionKind vocabulary, Pickup / Chest / Breakable types + their state enums. Pure data over the actor + geometry foundations; the game's ECS + LDtk conversion consume it. Extracted from ambition_actors."

[lib]
crate-type = ["rlib"]

[dependencies]
ambition_characters = { path = "../ambition_characters" }
ambition_engine_core = { path = "../ambition_engine_core" }
ambition_entity_catalog = { path = "../ambition_entity_catalog" }
serde = { workspace = true }
