[package]
name = "ambition_items"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Reusable item catalog and shop primitives for Ambition-style platformers."

[lib]
crate-type = ["rlib"]

[dependencies]
ambition_characters = { path = "../ambition_characters" }
ambition_persistence = { path = "../ambition_persistence" }
bevy = { version = "0.18.1", default-features = false, features = ["bevy_state"] }
ron = { workspace = true }
serde = { workspace = true }
