[package]
name = "ambition_load"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Headless load coordination: work evidence, activation barriers, streaming/prefetch roles, cancellation, supersession, failure, and readiness."
publish = false

[lib]
crate-type = ["rlib"]

[dependencies]
bevy = { version = "0.18.1", default-features = false }
