[package]
name = "ambition_load_presentation"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Contributor-neutral loading foreground lifecycle with shell adaptation, semantic progress, activities, ready-hold, and deterministic cleanup."
publish = false

[lib]
crate-type = ["rlib"]

[features]
default = []
basic_presentation = ["bevy/ui_api", "ambition_game_shell/basic_presentation"]

[dependencies]
ambition_load = { path = "../ambition_load" }
ambition_game_shell = { path = "../ambition_game_shell" }
bevy = { version = "0.18.1", default-features = false }
