[package]
name = "ambition_menu"
version = "0.1.0"
edition = "2021"
description = "Reusable Bevy inventory/menu UI data model and interaction primitives."
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
bevy = "0.18.1"
# The bevy_lunex cube renderer moved to the `ambition_menu_kaleidoscope`
# extension crate (E1e); this crate is now bevy_lunex-free (the flat bevy_ui
# grid renderer + the renderer-agnostic page model).
