[package]
name = "ambition_persistence"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Ambition saved-shape and settings persistence model."

[dependencies]
ambition_engine_core = { path = "../ambition_engine_core" }
ambition_input = { path = "../ambition_input" }
bevy = { version = "0.18.1", default-features = false, features = ["bevy_log", "bevy_window"] }
ron = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
serde_json = "1"
tempfile = "3"
