[package]
name = "ambition_platformer_primitives"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Reusable, content-free platformer runtime primitives (lifecycle vocabulary + schedule sets) extracted from ambition_gameplay_core. See docs/current/state.md and docs/systems/architecture.md."

[lib]
# rlib only: a library consumed by ambition_gameplay_core (and future runtime
# crates). Packaging is the consuming binary's responsibility.
crate-type = ["rlib"]

[dependencies]
# Only the ECS surface is needed: Component / Bundle / Commands /
# EntityCommands / Entity / SystemSet (via bevy::prelude). No render, audio,
# windowing, or asset features — this crate must stay reusable and headless.
bevy = { version = "0.18.1", default-features = false }

# The content-free pure-logic foundation (geometry / world / movement / the
# shared BodyKinematics body component). The runtime layer sits directly above
# it (ADR 0019); the generic ECS systems moved here operate on engine_core
# bodies/world. Foundation-only — still NEVER ambition_gameplay_core.
ambition_engine_core = { path = "../ambition_engine_core" }

# Serde derive for the authored projectile spec (`ProjectileKind`). Mirrors
# the engine_core dependency; no other crate features needed.
serde = { version = "1", features = ["derive"] }
