[package]
name = "ambition_platformer_primitives"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Reusable, content-free platformer runtime primitives (lifecycle vocabulary + schedule sets) extracted from ambition_actors. See docs/current/state.md and docs/systems/architecture.md."

[lib]
# rlib only: a library consumed by ambition_actors (and future runtime
# crates). Packaging is the consuming binary's responsibility.
crate-type = ["rlib"]

[dependencies]
# Only the ECS/state/input surface is needed: Component / Bundle / Commands /
# EntityCommands / Entity / SystemSet / States / Reflect (via bevy::prelude). No render,
# audio, or asset features — this crate stays reusable and headless.
# `bevy_input_focus` is what puts `KeyCode`/`ButtonInput` in the facade for
# `developer_hotkeys`; without it this crate only compiled when a co-built
# sibling happened to unify the feature in (same trap game_shell documents).
bevy = { version = "0.18.1", default-features = false, features = [
    "bevy_state",
    "bevy_input_focus",
] }

# The content-free pure-logic foundation (geometry / world / movement / the
# shared BodyKinematics body component). The runtime layer sits directly above
# it (ADR 0019); the generic ECS systems moved here operate on engine_core
# bodies/world. Foundation-only — still NEVER ambition_actors.
ambition_engine_core = { path = "../ambition_engine_core" }
